--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,7 @@
     <script src="/components/dv.web/app/anon/login/app.js"></script>
     <script src="/components/dv.web/app/auth/home/HomeCtrl.js"></script>
     <script src="/components/dv.web/app/auth/home/MainHomeCtrl/MainHomeCtrl.js"></script>
+    <script src="/components/dv.web/app/auth/home/StoryCtrl/StoryCtrl.js"></script>
     <script src="/components/dv.web/app/auth/home/app.js"></script>
     <script src="/components/dv.web/app/auth/home/dv-nav-bar.js"></script>
     <script src="/components/dv.web/app/auth/home/dv-side-bar.js"></script>
