--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- create global DV object-->
     <script>
       window.DV = {};
-      window.DV.BASE_URL = 'http://kent.doddsfamily.us/diviggle/';
+      window.DV.BASE_URL = 'http://kent.doddsfamily.us/diviggle/public/';
       window.DV.FBAPI = 'https://diviggle.firebaseio.com/';
       window.DV.onDev = false;
     </script>
